added header and main sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,123 @@
 .primary-text{
   color:#519872;
+  font-family: 'Open Sans', sans-serif;
 }
 .primary-background{
   background-color:#519872;
 }
 .secondary-text{
   color:#ffffff;
+  font-family: 'Open Sans', sans-serif;
 }
 .secondary-background{
   background-color:#ffffff;
 }
+
+body {
+  background: gray;
+  /*url(assets/images/background.jpg) no-repeat center center fixed; */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 0px;
+  margin: 0px;
+}
+/* HEADER */
+
+header {
+  height:70px;
+  padding: 10px 20px;
+  line-height: 70px;
+  border-bottom: 1px solid white;
+  margin: 0px 50px;
+}
+
+.logo{
+  float: left;
+}
+
+.logo img {
+  vertical-align:middle;
+}
+
+nav {
+  float:right;
+}
+
+nav ul {
+  padding:0px;
+  margin: 0px;
+  list-style-type:none;
+}
+
+nav li {
+  display: inline-block;
+  padding: 0px 5px;
+}
+
+nav li a {
+  text-decoration: none;
+}
+
+
+/* MAIN */
+
+main {
+  overflow:auto;
+  padding: 40px 40px 0px 40px;
+  height:500px;
+  text-align: center;
+}
+
+main h1 {
+  font-weight: lighter;
+  font-size: 40px;
+}
+
+main h3 {
+  font-size: 24px
+  font-weight:lighter;
+}
+
+main h2 {
+  font-size: 30px;
+  font-weight: lighter;
+}
+
+.button {
+  padding: 10px 15px;
+  border-radius: 6px;
+  text-align: center;
+}
+
+main a {
+  text-decoration: none;
+}
+
+section {
+  padding: 20px 40px 0px 40px;
+  overflow: auto;
+}
+
+section .special {
+  width: 25%;
+  height: 250px;
+  float:left;
+  box-sizing: border-box;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin:0 40px;
+  padding-top: 25px;
+}
+
+section .special img {
+  border-radius: 100%;
+  border:2px solid #519872;
+}
+
+section .special p{
+  font-size: 18px;
+}
+/* FOOTER */
+
