--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,69 @@
+body {
+  background: url('../images/background.jpg');
+  background-size: cover;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
 .primary-text{
   color:#519872;
-  font-family: 'Open Sans', sans-serif;
 }
 .primary-background{
   background-color:#519872;
 }
 .secondary-text{
   color:#ffffff;
-  font-family: 'Open Sans', sans-serif;
 }
 .secondary-background{
   background-color:#ffffff;
 }
 
-body {
-  background: gray;
-  /*url(assets/images/background.jpg) no-repeat center center fixed; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  padding: 0px;
-  margin: 0px;
+h1 {
+  font-weight: 300;
+  font-size: 40px;
 }
+
+h2 {
+  font-size: 30px;
+  font-weight: 300;
+  margin-top: 50px;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 300;
+
+}
+
+.button {
+  padding: 10px 15px;
+  border-radius: 6px;
+  text-align: center;
+}
+
+.col-half {
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+}
+
+.col-third {
+  width: 33.3%;
+  float:left;
+  box-sizing: border-box;
+}
+
 /* HEADER */
 
 header {
   height:70px;
+  width:85%;
   padding: 10px 20px;
   line-height: 70px;
   border-bottom: 1px solid white;
-  margin: 0px 50px;
+  margin: auto;
 }
 
 .logo{
@@ -39,6 +72,7 @@ header {
 
 .logo img {
   vertical-align:middle;
+  display: inline-block;
 }
 
 nav {
@@ -56,39 +90,26 @@ nav li {
   padding: 0px 5px;
 }
 
-nav li a {
+nav a {
   text-decoration: none;
 }
 
+nav a:hover{
+  opacity: .8;
+}
 
 /* MAIN */
 
 main {
   overflow:auto;
-  padding: 40px 40px 0px 40px;
-  height:500px;
+  padding: 40px 20px;
+  width: 85%;
   text-align: center;
+  margin: auto;
 }
 
-main h1 {
-  font-weight: lighter;
-  font-size: 40px;
-}
-
-main h3 {
-  font-size: 24px
-  font-weight:lighter;
-}
-
-main h2 {
-  font-size: 30px;
-  font-weight: lighter;
-}
-
-.button {
-  padding: 10px 15px;
-  border-radius: 6px;
-  text-align: center;
+main .cta {
+  display: inline-block;
 }
 
 main a {
@@ -100,15 +121,14 @@ section {
   overflow: auto;
 }
 
-section .special {
-  width: 25%;
-  height: 250px;
-  float:left;
-  box-sizing: border-box;
+
+section .col-third .special {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  margin:0 40px;
+  height: 220px;
   padding-top: 25px;
+  width: 80%;
+  margin:auto;
 }
 
 section .special img {
@@ -118,6 +138,28 @@ section .special img {
 
 section .special p{
   font-size: 18px;
+  font-weight: 400;
 }
 /* FOOTER */
 
+footer {
+  text-align: center;
+  padding: 20px 0px;
+}
+
+footer .locations {
+  border-bottom: 1px solid white;
+  width: 85%;
+  margin: 0 auto;
+  overflow:auto;
+  padding: 20px;
+}
+
+.locations span {
+  font-size: 16px;
+}
+
+footer .logo {
+  padding: 20px;
+  margin:auto;
+}
